--- a/templates/example.yml
+++ b/templates/example.yml
@@ -1,6 +1,11 @@
-folder:
-  name: Minimal Example
-  sites:
-  - module: polybox
+children:
+- children:
+  - folder_name: Polybox Folder
     id: YrFA3IT7FhemOAs
-    folder_name: Polybox Folder
+    meta_data:
+      check_state: 2
+    module: polybox
+    use_folder: true
+  folder: Minimal Example
+  meta_data:
+    check_state: 2
