--- a/templates/FS2020/itet/semester2.yml
+++ b/templates/FS2020/itet/semester2.yml
@@ -1,80 +1,135 @@
-folder:
-  name: semester2
-  sites:
-  - module: moodle # NuS2
+children:
+- folder: semester2
+  meta_data:
+    check_state: 2
+  children:
+  - folder: Video Portal
+    meta_data:
+      check_state: 0
+    children:
+    - module: video_portal
+      use_folder: true
+      course_id: 401-0232-10L
+      department: d-math
+      semester: spring
+      year: 2020
+      meta_data:
+        check_state: 2
+    - module: video_portal
+      use_folder: true
+      course_id: 401-0302-10L
+      department: d-math
+      semester: spring
+      year: 2020
+      meta_data:
+        check_state: 0
+    - module: video_portal
+      use_folder: true
+      course_id: 227-0002-00L
+      department: d-itet
+      pwd_username: bie-20s
+      semester: spring
+      year: 2020
+      meta_data:
+        check_state: 0
+    - module: video_portal
+      use_folder: true
+      course_id: 227-0002-00L
+      department: d-itet
+      pwd_username: bie-19s
+      semester: spring
+      year: 2019
+      meta_data:
+        check_state: 2
+    - module: video_portal
+      use_folder: true
+      course_id: 252-0848-00L
+      department: d-infk
+      pwd_username: scw-20s
+      semester: spring
+      year: 2020
+      meta_data:
+        check_state: 2
+    - module: video_portal
+      use_folder: true
+      course_id: 252-0847-00L
+      department: d-infk
+      pwd_username: scw-19s
+      semester: autumn
+      year: 2019
+      meta_data:
+        check_state: 0
+    - module: polybox
+      use_folder: true
+      folder_name: NuS2 Podcast
+      id: SU2lkCtdoLH3X1w
+      meta_data:
+        check_state: 0
+  - module: moodle
+    use_folder: true
     id: 11838
-    sites:
+    meta_data:
+      check_state: 2
+    children:
     - module: polybox
+      use_folder: true
       id: 4YGUCHIXorTsvVL
-  - module: moodle # Physik1
+      meta_data:
+        check_state: 2
+  - module: moodle
+    use_folder: true
     id: 12228
-    sites:
+    meta_data:
+      check_state: 2
+    children:
     - module: polybox
+      use_folder: true
       id: iSYMs1nnDAzDWtU
-  - module: moodle # Koma
+      meta_data:
+        check_state: 2
+  - module: moodle
+    use_folder: true
     id: 12301
-    forbidden_extensions: [video]
-    sites:
+    forbidden_extensions:
+    - video
+    meta_data:
+      check_state: 2
+    children:
     - module: nethz
+      use_folder: true
       url: https://n.ethz.ch/~tiagos/download/2020/
-  - module: moodle # Analysis2
+      meta_data:
+        check_state: 2
+  - module: moodle
+    use_folder: true
     id: 12611
-    sites:
+    meta_data:
+      check_state: 2
+    children:
     - module: custom
-      function: FS2020.analysis.parse_main_page
       use_folder: false
+      function: FS2020.analysis.parse_main_page
+      meta_data:
+        check_state: 2
     - module: ilias
-      id: 187834
+      use_folder: true
       folder_name: Notizen
+      id: 187834
+      meta_data:
+        check_state: 2
     - module: nethz
+      use_folder: true
       url: https://n.ethz.ch/~cdirren/downloads/Analysis_2/
+      meta_data:
+        check_state: 2
     - module: polybox
+      use_folder: true
       id: C8LWUyvLRUbh3zX
-  - module: custom # Informatik1
-    function: FS2020.informatik.parse_main_page
+      meta_data:
+        check_state: 2
+  - module: custom
+    use_folder: true
     folder_name: Computer Science  D-ITET  SS 20
-  - folder:
-      name: Video Portal
-      sites:
-      - module: video_portal
-        department: d-math
-        year: 2020
-        semester: spring
-        course_id: 401-0232-10L
-      - module: video_portal
-        department: d-math
-        year: 2020
-        semester: spring
-        course_id: 401-0302-10L
-      - module: video_portal
-        department: d-itet
-        year: 2020
-        semester: spring
-        course_id: 227-0002-00L
-        pwd_username: bie-20s
-        pwd_password: null
-      - module: video_portal
-        department: d-itet
-        year: 2019
-        semester: spring
-        course_id: 227-0002-00L
-        pwd_username: bie-19s
-        pwd_password: null
-      - module: video_portal
-        department: d-infk
-        year: 2020
-        semester: spring
-        course_id: 252-0848-00L
-        pwd_username: scw-20s
-        pwd_password: null
-      - module: video_portal
-        department: d-infk
-        year: 2019
-        semester: autumn
-        course_id: 252-0847-00L
-        pwd_username: scw-19s
-        pwd_password: null
-      - module: polybox
-        folder_name: NuS2 Podcast
-        id: SU2lkCtdoLH3X1w
-        password: null
+    function: FS2020.informatik.parse_main_page
+    meta_data:
+      check_state: 2
