--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@master
     - name: Get Release Info
       id: release_info
       run: sh release_info.sh
@@ -30,8 +30,6 @@ jobs:
       #fail-fast: false
 
     steps:
-      - uses: actions/checkout@v2
-        -
       - name: Set up Python 3.7
         uses: actions/setup-python@v2
         with:
