--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
   build:
     needs: check_release
-    #if: (needs.check_release.outputs.latest_release != needs.check_release.outputs.current_version)
+    if: (needs.check_release.outputs.latest_release != needs.check_release.outputs.current_version)
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -207,11 +207,6 @@ jobs:
         with:
           name: eth-document-fetcher-osx.dmg
           path: macos/
-
-      - name: TREE
-        run: |
-            sudo apt update && sudo apt install tree
-            tree .
 
       # - name: Read upload URL into output
       #   id: upload_url
