--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
   build:
     needs: check_release
-    if: (needs.check_release.outputs.latest_release != needs.check_release.outputs.current_version)
+    #if: (needs.check_release.outputs.latest_release != needs.check_release.outputs.current_version)
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -42,7 +42,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       with:
-        submodules: true
+        submodules: recursive
+
+    - name: Test
+      shell: cmd
+      run: dir /s /b /o:gn
 
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
